15749
Given the the following files:

`p/J.java`
```scala
package p;
public class J {
    protected void m() { return; }
}
```


`p/S.scala`
```scala
package p
class S extends J {
  override protected def m { }
}
```

Compiling them together with `scalac` gives the correct error message:
```scala
lamppc11:bug1 luc$$ ../../target/pack/bin/scalac p/J.java p/S.scala
p/S.scala:3: error: overriding method m in class J of type ()Unit;
 method m has weaker access privileges; it should be at least protected[p]
  override protected def m { }
                         ^
one error found
```

However, when compiling first the Java file, then the Scala file there's no error message:
```scala
lamppc11:bug1 luc$$ javac p/J.java 
lamppc11:bug1 luc$$ ../../target/pack/bin/scalac p/S.scala 
lamppc11:bug1 luc$$
```
